# image_process

./: .gitignore  CMakeLists.txt  CustomImage.qml  Main.qml  WindowCompress.qml  WindowDR.qml  WindowEdgeDetection.qml  WindowEnhance.qml  WindowFT.qml  WindowFilter.qml  WindowHistogram.qml  WindowMorphology.qml  WindowThreshold.qml  vcpkg.json
.github/workflows/: main.yml
include/: ImageController.h  ImageProcess.h  ImageProvider.h
source/: ImageProcess.cpp  ImageProvider.cpp  main.cpp
